--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
         </div>
         <nav class="nav">
             <div class="left-section-nav">
-                <a href="http://127.0.0.1:5500/slad.html">
+                <a href="#">
                     <img class="slad-logo" src="data/images/slad-logo-removebg.png"> 
             </div>
         
-            <ul class="right-section-nav" id="nav">
+            <ul class="right-section-nav no-select" id="nav">
                 <li><a href="#">notícias</a></li>
                 <li><a href="#">equipas</a></li>
                 <li><a href="#">resultados</a></li>
